fabric/testdata/out/ing_spp-brand-service-patch-api-brands-id-media-id-rl-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\",
      \"spp-brand-service.brands.write\") -\u003e clusterClientRatelimit(\"spp-brand-service_api-brands-id-media-id_PATCH\",
      30, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\") -\u003e corsOrigin(\"https://dabo-master.lounge-test.zalan.do\",
      \"https://dabo.lounge-test.zalan.do\", \"https://mooncake-master.lounge-test.zalan.do\",
      \"https://mooncake-freeze.lounge-test.zalan.do\", \"https://dabo-freeze.lounge-test.zalan.do\")","zalando.org/skipper-predicate":"Weight(3)
      \u0026\u0026 Path(\"/api/brands/:id/media/:id\") \u0026\u0026 Method(\"PATCH\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"916e724f-8e4a-4dad-9567-3d476c465596","deployment-id":"d-xr2dcbhocgmgsjwa9hxg1626a","pipeline-id":"l-2a15ina44v1jfac239xyczoh9s"},"name":"spp-brand-service-patch-api-brands-id-media-id-rl-all","namespace":"default"},"spec":{"rules":[{"host":"spp-brand-service.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-brand-service","servicePort":"http"},"pathType":"ImplementationS [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "spp-brand-service.brands.write") -> clusterClientRatelimit("spp-brand-service_api-brands-id-media-id_PATCH",
      30, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm") -> corsOrigin("https://dabo-master.lounge-test.zalan.do",
      "https://dabo.lounge-test.zalan.do", "https://mooncake-master.lounge-test.zalan.do",
      "https://mooncake-freeze.lounge-test.zalan.do", "https://dabo-freeze.lounge-test.zalan.do")'
    zalando.org/skipper-predicate: Weight(3) && Path("/api/brands/:id/media/:id")
      && Method("PATCH") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2020-02-20T12:06:07Z"
  generation: 10
  labels:
    controller-uid: 916e724f-8e4a-4dad-9567-3d476c465596
    deployment-id: d-xr2dcbhocgmgsjwa9hxg1626a
    pipeline-id: l-2a15ina44v1jfac239xyczoh9s
  name: spp-brand-service-patch-api-brands-id-media-id-rl-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-brand-service
    uid: 916e724f-8e4a-4dad-9567-3d476c465596
  resourceVersion: "1379126974"
  uid: 3d2f4a99-9ddf-407e-8c95-c188b1f792ac
spec:
  rules:
  - host: spp-brand-service.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-brand-service
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-brand-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-brand-service
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
